# 17_PersonnelApi_Logs_Documents/src/controllers/department.controller.js
@@ -7,23 +7,18 @@ const Department = require("../models/department.model");
 module.exports = {
   list: async (req, res) => {
     /*
-            #swagger.tags = ['Departments']
-            #swagger.summary = 'List Departments'
-            #swagger.description = `You can send query with endpoint for search[], sort[], page and limit.
+        #swagger.tags = ["Departments"]
+        #swagger.summary = "List Departments"
+        #swagger.description = `
+            You can send query with endpoint for search[], sort[], page and limit.
             <ul> Examples:
                 <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>
                 <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
                 <li>URL/?<b>page=2&limit=1</b></li>
-            </ul>`
-            #swagger.parameters['body'] = {
-                in: 'body',
-                required: true,
-                schema: {
-                    username: '*String',
-                    password: '*String',
-                }
-            }
-        */
+            </ul>
+        `
+    */
     const data = await res.getModelList(Department);
 
     res.status(200).send({
@@ -34,17 +29,17 @@ module.exports = {
   },
 
   create: async (req, res) => {
-  /* 
-   #swagger.tags = ["Departments"]
-        #swagger.summary = "Create Department"
+/*
+        #swagger.tags = ["Departments"]
+        #swagger.summary = "Create Departments"
         #swagger.parameters['body'] = {
-            in: 'body',
-            required: true,
-            schema: {
-                $ref: '#/definitions/Department'
+                in: 'body',
+                required: true,
+                schema: {
+                   $ref: '#/definitions/Department'
+                }
             }
-        }
-  */
+*/
     const data = await Department.create(req.body);
     res.status(201).send({
       error: false,
@@ -53,6 +48,12 @@ module.exports = {
   },
 
   read: async (req, res) => {
+
+    /*
+        #swagger.tags = ["Departments"]
+        #swagger.summary = "Get Single Departments"
+    */
+
     const data = await Department.findOne({ _id: req.params.id });
 
     res.status(200).send({
@@ -69,6 +70,19 @@ module.exports = {
   // upsertedCount: upsert işlemi ile kaç belgenin oluşturulduğunu belirtir.
 
   update: async (req, res) => {
+
+    /*
+        #swagger.tags = ["Departments"]
+        #swagger.summary = "Update Departments"
+        #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                   $ref: '#/definitions/Department'
+                }
+            }
+*/
+
     const data = await Department.updateOne({ _id: req.params.id }, req.body, {
       runValidators: true,
     });
@@ -81,6 +95,12 @@ module.exports = {
   },
 
   delete: async (req, res) => {
+
+    /*
+        #swagger.tags = ["Departments"]
+        #swagger.summary = "Delete Departments"
+    */
+
     const data = await Department.deleteOne({ _id: req.params.id });
     res.status(data.deletedCount ? 204 : 404).send({
       error: !data.deletedCount,
@@ -89,6 +109,12 @@ module.exports = {
   },
 
   personnels: async (req, res) => {
+
+     /*
+        #swagger.tags = ["Departments"]
+        #swagger.summary = "Get Personnels of Departments"
+    */
+
     const Personnel = require("../models/personnel.model");
 
     const data = await res.getModelList(
